<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_quiz"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/BackgroundCardContainer"
        android:elevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/categoryDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/doublePoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_toEndOf="@id/categoryDesc"
                android:text="@string/double_point"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_toEndOf="@+id/doublePoint"
                android:text="@string/tag"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_above="@id/tv_score"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/yellow"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryDesc"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:text="@string/scoreDesc"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/doublePoint2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/doublePoint"
                android:layout_marginVertical="10dp"
                android:layout_toEndOf="@id/doublePoint"
                android:text="@string/double_point"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_toEndOf="@id/doublePoint2"
                android:layout_below="@id/tv_tag"
                android:text="@string/score"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>
