<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layout_group_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_conversation"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Widget.AppCompat.Toolbar"
                android:background="@color/BackgroundSplash"
                app:popupTheme="@style/Theme.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:layout_marginEnd="18dp"
                    >

                    <TextView
                        android:id="@+id/msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/yellow"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:text="@string/app_name"/>

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:background="@color/BackgroundCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.Home"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/linearLayout_home"
            >

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_margin="@dimen/medium"
                app:lottie_rawRes="@raw/online"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" />

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/welcome_app" />

            <TextView
                android:id="@+id/tv_welcome_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome_presentation" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:backgroundTint="@color/BackgroundCard"
                >
                <RelativeLayout
                    android:id="@+id/btn_begin"
                    android:layout_width="160dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/btn_begin_image"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/bg_white_rounded_large"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/send_button" />

                    <TextView
                        android:id="@+id/tv_begin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/start_game"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</layout>
