<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="showLoading"
            type="boolean" />
        <import type="android.view.View" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{showLoading ? @color/white : @color/BackgroundCard}"
        android:orientation="vertical">

<!--    <com.airbnb.lottie.LottieAnimationView-->
<!--        android:id="@+id/animation_view_game"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_margin="@dimen/medium"-->
<!--        app:lottie_rawRes="@raw/loading_motion"-->
<!--        app:lottie_loop="true"-->
<!--        app:lottie_autoPlay="true"-->
<!--        android:visibility="@{showLoading ? View.VISIBLE : View.GONE}"-->
<!--        />-->

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layout_group_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_conversation"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Widget.AppCompat.Toolbar"
                android:background="@color/BackgroundSplash"
                app:popupTheme="@style/Theme.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:layout_marginEnd="18dp"
                    >

                    <TextView
                        android:id="@+id/msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/yellow"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:text="@string/stats"/>

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            tools:context=".ui.fragments.Stats">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/BackgroundCard"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewGame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/BackgroundCard"
                    tools:listitem="@layout/stats_card"
                />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btn_delete_all"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom|center"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="10dp"
                    app:icon="@drawable/send"
                    app:iconTint="@color/white"
                    android:text="@string/delete_all"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:backgroundTint="@color/progressBarIndicator"
                    app:fabSize="mini"
                    app:rippleColor="@color/red"
                    android:contentDescription="@string/send_answers" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>
